# ESP32S3_LVGL

./: .gitignore  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c
main/gui_app/: ui.c  ui.h  ui_helpers.c  ui_helpers.h
main/gui_app/components/: ui_comp.c  ui_comp.h  ui_comp_alarm_comp.c  ui_comp_alarm_comp.h  ui_comp_clock_dot.c  ui_comp_clock_dot.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_scrolldots.c  ui_comp_scrolldots.h  ui_comp_small_label.c  ui_comp_small_label.h
main/gui_app/images/: ui_img_album_png.c  ui_img_avatar_png.c  ui_img_backward_png.c  ui_img_chatbox2_png.c  ui_img_chatbox_png.c  ui_img_clock_hour_png.c  ui_img_clock_min_png.c  ui_img_clock_sec_png.c  ui_img_cloud_png.c  ui_img_forward_png.c  ui_img_pattern_png.c  ui_img_phone_png.c  ui_img_play_png.c  ui_img_sls_logo_png.c  ui_img_weather_1_png.c  ui_img_weather_2_png.c  ui_img_weather_3_png.c
main/gui_app/screens/: ui_Alarm.c  ui_Call.c  ui_Chat.c  ui_Clock.c  ui_Music_Player.c  ui_Screen1.c  ui_Splash.c  ui_Weather.c
